--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "react": "^16.6.3",
     "react-bootstrap-modal": "^4.2.0",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
