--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "concurrently \"cd backend && npm start\" \"cd frontend && npm start\"",
     "clean": "concurrently \"rimraf node_modules\" \"cd backend && rimraf node_modules build\" \"cd frontend && rimraf node_modules build\"",
     "heroku-postbuild": "npm run build",
-    "start": "concurrently \"cd backend && npm start\" \"cd frontend && npm start\"",
+    "start": "concurrently \"cd backend && npm start\" \"cd frontend && npm start\""
     },
   "repository": {
     "type": "git",
