--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "build": "concurrently \"cd backend && npm start\" \"cd frontend && npm start\"",
+    "build": "concurrently \"cd backend && npm start\" \"cd frontend && npm build\"",
     "clean": "concurrently \"rimraf node_modules\" \"cd backend && rimraf node_modules build\" \"cd frontend && rimraf node_modules build\"",
     "heroku-postbuild": "npm run build",
     "start": "concurrently \"cd backend && npm start\" \"cd frontend && npm start\""
