--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  engines: {
+    "npm":"5.6.0",
+    "node":"8.11.3"
+  },
   "dependencies": {
     "bootstrap": "^4.1.3",
     "concurrently": "^4.1.0",
@@ -13,7 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "build": "concurrently \"cd backend && npm start\" \"cd frontend && npm build\"",
+    "build": "\"cd frontend && npm build\"",
     "clean": "concurrently \"rimraf node_modules\" \"cd backend && rimraf node_modules build\" \"cd frontend && rimraf node_modules build\"",
     "heroku-postbuild": "npm run build",
     "start": "concurrently \"cd backend && npm start\" \"cd frontend && npm start\""
