--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  engines: {
+  "engines": {
     "npm":"5.6.0",
     "node":"8.11.3"
   },
