--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "build": "\"cd frontend && npm build\"",
+    "build": "\"cd frontend && npm run-script build\"",
     "clean": "concurrently \"rimraf node_modules\" \"cd backend && rimraf node_modules build\" \"cd frontend && rimraf node_modules build\"",
     "heroku-postbuild": "npm run build",
     "start": "concurrently \"cd backend && npm start\" \"cd frontend && npm start\""
